--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1>
-            COMING SOON
-        </h1>
+        <div id="codewindow">
+            <div id="topwindow">
+                <span class="grey dot">-</span>
+                <span class="grey dot"></span>
+                <span class="red dot">x</span>
+            </div>
+            <div class="numberwindow">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div id="infoswindow">
+            <span>/* 
+                    Quelques infos sur moi <br>
+                    Contactez-moi sur aurore.chayrouse@gmail.com
+                 */
+            </span>   
+        </div> 
+
+        </div>
+
+
+
+
     </body>
 </html>
