--- a/static/index.html
+++ b/static/index.html
@@ -2,15 +2,23 @@
     <head>
         <link rel="stylesheet" type="text/css" href="/style/style.css">
         <title>Aurore Chayrouse</title>
+        <script src="https://kit.fontawesome.com/3a320898d3.js" crossorigin="anonymous"></script>
     </head>
     <body>
         
         <!-- code window-->
+        <h1>AURORE CHAYROUSE</h1>
+        <h3>Développeuse Full Stack</h3>
+        <div id="icons">
+            <a href="https://github.com/Fhuyu" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://gitlab.com/Fuyuh" target="_blank"><i class="fab fa-gitlab"></i></a>
+            <a href="https://www.linkedin.com/in/aurore-chayrouse/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        </div>
         <div class="codewindow" id="mydiv">
             <div class="topwindow" id="mydivheader">
                 <div class="dot">
                     <span class="grey">-</span>
-                    <span class="grey"></span>
+                    <span class="grey">☐</span>
                     <span class="red">✕</span>
                 </div>
             </div>
@@ -64,7 +72,7 @@
                     <span>
                         {<br>
                             <span class="main">"skills" </span>{<br>
-                                <span class="sub section">"devlopment" </span>{<br>
+                                <span class="sub section">"development" </span>{<br>
                                     <span class="key">"python"</span> : <span class="number">50</span>,<br>
                                     <span class="key">"javascript"</span> : <span class="number">60</span>,<br>
                                     <span class="key">"css" </span>: <span class="number">90</span>,<br>
